-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.0.3, Qt Creator 4.1.0-beta1, Qt Creator 4.2.0-beta1
-
None
-
20db17e4f07c298874f01eb0f9ebeb26a7887fdd
Starting an application with manual -qmljsdebugger arguments and then connecting to it with the "Attach to QML port..." menu entry doesn't work. You immediately get the "Could not connect to the in-process QML debugger" error message.
Debugger log (right side; left side is empty):
sStarting debugger "QmlEngine" for ABI "x86-linux-generic-elf-64bit"... dStart parameters: '' mode: 7 dABI: x86-linux-generic-elf-64bit dLanguages: qml dDebugger: /usr/bin/gdb dProject: /home/ulf/dev/qtcreator-superAddtional Search Directories: dQML server: 127.0.0.1:47428 dRemote: :0 dSysroot: dDebug Source Location: dDebugger settings: dUseCodeModel: true (default: true) dRaiseOnInterrupt: true (default: true) dStationaryEditorWhileStepping: false (default: false) dSwitchModeOnExit: false (default: false) dBreakpointsFullPath: false (default: false) dCloseBuffersOnExit: false (default: false) dCloseMemoryBuffersOnExit: true (default: true) dLogTimeStamps: false (default: false) dAutoQuit: false (default: false) dFontSizeFollowsEditor: false (default: false) dUseMessageBoxForSignals: true (default: true) dUseAlternatingRowColours: false (default: false) dQmlInspector.ShowAppOnTop: true (default: false) *** dBreakOnAbort: false (default: false) dShowQmlObjectTree: true (default: true) dBreakOnWarning: false (default: false) dBreakOnFatal: false (default: false) dBreakOnThrow: false (default: false) dBreakOnCatch: false (default: false) dNoPluginBreakpoints: false (default: false) dSelectedPluginBreakpointsPattern: .* (default: .*) dSelectedPluginBreakpoints: false (default: false) dAdjustBreakpointLocations: true (default: true) dAllPluginBreakpoints: true (default: true) dSkipKnownFrames: false (default: false) dEnableReverseDebugging: false (default: false) dMaximalStringLength: 15000 (default: 10000) *** dDisplayStringLimit: 100 (default: 100) dSortStructMembers: true (default: true) dAutoDerefPointers: false (default: true) *** dShowQtNamespace: true (default: true) dShowQObjectNames: false (default: false) dShowStandardNamespace: true (default: true) dMaximalStackDepth: 20 (default: 20) dIntelFlavor: false (default: false) dIdentifyDebugInfoPackages: false (default: false) dWarnOnReleaseBuilds: true (default: true) dMultiInferior: false (default: false) dUseDynamicType: true (default: true) dTargetAsync: false (default: false) dWatchdogTimeout: 20 (default: 20) dAutoEnrichParameters: true (default: true) dGdbStartupCommands: (default: ) dGdbPostAttachCommands: (default: ) dLoadGdbDumpers2: false (default: false) dAttemptQuickStart: false (default: false) dIgnoreFirstChanceAccessViolation: false (default: false) dLoadGdbInit: true (default: true) dCDB_Console: false (default: false) dBreakpointCorrection: true (default: true) dBreakEvent: (default: ) dBreakOnCrtDbgReport: false (default: false) dSymbolPaths: (default: ) dSourcePaths: (default: ) dGdbCustomDumperCommands: (default: ) dAdditionalArguments: (default: ) dAlwaysAdjustColumnWidths: true (default: true) dExtraDumperFile: (default: ) dUseAddressInStackView: true (default: false) *** dUseToolTipsInBreakpointsView: true (default: true) dUseAddressInBreakpointsView: false (default: false) dUseToolTipsInLocalsView: false (default: false) dUseToolTipsInBreakpointsView: true (default: false) *** dShowThreadNames: true (default: false) *** dUseToolTips: false (default: true) *** dUseDebuggingHelper: true (default: true) dState changed from DebuggerNotReady(0) to EngineSetupRequested(1) [master] dQUEUE: SETUP ENGINE dCALL: SETUP ENGINE dNOTE: ENGINE SETUP OK dState changed from EngineSetupRequested(1) to EngineSetupOk(3) [master] dQUEUE: SETUP INFERIOR dState changed from EngineSetupOk(3) to InferiorSetupRequested(4) [master] dQUEUE: SETUP INFERIOR dCALL: SETUP INFERIOR dNOTE: INFERIOR SETUP OK dState changed from InferiorSetupRequested(4) to InferiorSetupOk(6) [master] dState changed from InferiorSetupOk(6) to EngineRunRequested(7) [master] dQUEUE: RUN ENGINE dCALL: RUN ENGINE sQML Debugger: Resolving host sQML Debugger: Establishing network connection ... sQML Debugger: Network connection dropped dNOTE: ENGINE RUN FAILED sRun failed. dState changed from EngineRunRequested(7) to EngineRunFailed(8) [master] dState changed from EngineRunFailed(8) to EngineShutdownRequested(19) [master] dQUEUE: SHUTDOWN ENGINE dQUIT DEBUGGER REQUESTED IN STATE 19 dCALL: SHUTDOWN ENGINE dNOTE: ENGINE SHUTDOWN OK dState changed from EngineShutdownRequested(19) to EngineShutdownOk(21) [master] dState changed from EngineShutdownOk(21) to DebuggerFinished(22) [master] dQUEUE: FINISH DEBUGGER dNOTE: FINISH DEBUGGER dHANDLE RUNCONTROL FINISHED sDebugger finished.
In this example the port given was 41955.
For Gerrit Dashboard: QTCREATORBUG-16708 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
166866,2 | Debugger: Only use random QML port if none was given | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
167556,2 | Debugger: Only use random QML port if none was given | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |