Debugger: Only use random QML port if none was given

Change-Id: Ice80ac46d5b8a0f24fa3b18ad8197b360fb6361f
Task-number: QTCREATORBUG-16708
Reviewed-by: Christian Stenger <christian.stenger@qt.io>